// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate comparateur-statuts > ACRE 1`] = `
"dirigeant . rémunération . net: 44208
dirigeant . rémunération . net . après impôt: 44154
entreprise . activité . nature . libérale . réglementée: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9612
protection sociale . invalidité et décès . capital décès . orphelin: 200
protection sociale . invalidité et décès . pension de reversion: 392
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 487
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 725
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . arrêt maladie: 24
protection sociale . maladie . arrêt maladie . délai d'attente: 12
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 66
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 2003
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 4005
protection sociale . retraite . base: 725
protection sociale . retraite . complémentaire: 75
protection sociale . retraite . trimestres: 4

Notifications affichées : dirigeant . auto-entrepreneur . Acre . notification calcul ACRE annuel"
`;

exports[`calculate comparateur-statuts > ACRE 2`] = `
"dirigeant . rémunération . net: 38103
dirigeant . rémunération . net . après impôt: 33117
entreprise . activité . nature . libérale . réglementée: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9612
protection sociale . invalidité et décès . capital décès . orphelin: 200
protection sociale . invalidité et décès . pension de reversion: 887
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 985
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1642
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . arrêt maladie: 54
protection sociale . maladie . arrêt maladie . délai d'attente: 12
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 66
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 2003
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 4005
protection sociale . retraite . base: 1642
protection sociale . retraite . complémentaire: 143
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > ACRE 3`] = `
"dirigeant . rémunération . net: 32921
dirigeant . rémunération . net . après impôt: 30330
entreprise . activité . nature . libérale . réglementée: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: 1322
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: 827
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: 827
protection sociale . invalidité et décès . capital décès: 3681
protection sociale . invalidité et décès . capital décès . orphelin: null
protection sociale . invalidité et décès . pension de reversion: 893
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 992
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1653
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: 52
protection sociale . maladie . arrêt maladie: 42
protection sociale . maladie . arrêt maladie . délai d'attente: 4
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 86
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: null
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: null
protection sociale . retraite . base: 1653
protection sociale . retraite . complémentaire: 146
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > EI à l'IS 1`] = `
"dirigeant . rémunération . net: 27641
dirigeant . rémunération . net . après impôt: 26237
entreprise . activité . nature . libérale . réglementée: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9612
protection sociale . invalidité et décès . capital décès . orphelin: 200
protection sociale . invalidité et décès . pension de reversion: 646
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 718
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1197
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . arrêt maladie: 39
protection sociale . maladie . arrêt maladie . délai d'attente: 12
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 66
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 2003
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 4005
protection sociale . retraite . base: 1197
protection sociale . retraite . complémentaire: 104
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > bas revenus 1`] = `
"dirigeant . rémunération . net: 1746
dirigeant . rémunération . net . après impôt: 1746
entreprise . activité . nature . libérale . réglementée: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: null
protection sociale . invalidité et décès . capital décès . orphelin: null
protection sociale . invalidité et décès . pension de reversion: 306
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 0
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 0
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . arrêt maladie: 0
protection sociale . maladie . arrêt maladie . délai d'attente: 12
protection sociale . maladie . arrêt maladie . délai de carence: null
protection sociale . maladie . maternité paternité adoption: 7
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 200
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 401
protection sociale . retraite . base: 24
protection sociale . retraite . complémentaire: 2
protection sociale . retraite . trimestres: 0"
`;

exports[`calculate comparateur-statuts > bas revenus 2`] = `
"dirigeant . rémunération . net: 540
dirigeant . rémunération . net . après impôt: 540
entreprise . activité . nature . libérale . réglementée: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9612
protection sociale . invalidité et décès . capital décès . orphelin: 200
protection sociale . invalidité et décès . pension de reversion: 306
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 487
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 686
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . arrêt maladie: 26
protection sociale . maladie . arrêt maladie . délai d'attente: 12
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 66
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 2003
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 4005
protection sociale . retraite . base: 225
protection sociale . retraite . complémentaire: 2
protection sociale . retraite . trimestres: 2"
`;

exports[`calculate comparateur-statuts > bas revenus 3`] = `
"dirigeant . rémunération . net: 733
dirigeant . rémunération . net . après impôt: 733
entreprise . activité . nature . libérale . réglementée: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: 42
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: 26
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: 26
protection sociale . invalidité et décès . capital décès: 3681
protection sociale . invalidité et décès . capital décès . orphelin: null
protection sociale . invalidité et décès . pension de reversion: 306
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 32
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 53
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: 2
protection sociale . maladie . arrêt maladie: 0
protection sociale . maladie . arrêt maladie . délai d'attente: null
protection sociale . maladie . arrêt maladie . délai de carence: null
protection sociale . maladie . maternité paternité adoption: 0
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: null
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: null
protection sociale . retraite . base: 53
protection sociale . retraite . complémentaire: 5
protection sociale . retraite . trimestres: 0"
`;

exports[`calculate comparateur-statuts > base 1`] = `
"dirigeant . rémunération . net: 40548
dirigeant . rémunération . net . après impôt: 40494
entreprise . activité . nature . libérale . réglementée: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9612
protection sociale . invalidité et décès . capital décès . orphelin: 200
protection sociale . invalidité et décès . pension de reversion: 392
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 487
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 725
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . arrêt maladie: 24
protection sociale . maladie . arrêt maladie . délai d'attente: 12
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 66
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 2003
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 4005
protection sociale . retraite . base: 725
protection sociale . retraite . complémentaire: 75
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > base 2`] = `
"dirigeant . rémunération . net: 33008
dirigeant . rémunération . net . après impôt: 29550
entreprise . activité . nature . libérale . réglementée: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9612
protection sociale . invalidité et décès . capital décès . orphelin: 200
protection sociale . invalidité et décès . pension de reversion: 772
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 858
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1430
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . arrêt maladie: 47
protection sociale . maladie . arrêt maladie . délai d'attente: 12
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 66
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 2003
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 4005
protection sociale . retraite . base: 1430
protection sociale . retraite . complémentaire: 125
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > base 3`] = `
"dirigeant . rémunération . net: 26940
dirigeant . rémunération . net . après impôt: 25539
entreprise . activité . nature . libérale . réglementée: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: 1148
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: 717
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: 717
protection sociale . invalidité et décès . capital décès: 3681
protection sociale . invalidité et décès . capital décès . orphelin: null
protection sociale . invalidité et décès . pension de reversion: 775
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 861
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1435
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: 45
protection sociale . maladie . arrêt maladie: 42
protection sociale . maladie . arrêt maladie . délai d'attente: 5
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 75
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: null
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: null
protection sociale . retraite . base: 1435
protection sociale . retraite . complémentaire: 127
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > profession libérale non reglementée 1`] = `
"dirigeant . rémunération . net: 29520
dirigeant . rémunération . net . après impôt: 24475
entreprise . activité . nature . libérale . réglementée: false
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9612
protection sociale . invalidité et décès . capital décès . orphelin: 200
protection sociale . invalidité et décès . pension de reversion: 891
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 990
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1650
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . arrêt maladie: 54
protection sociale . maladie . arrêt maladie . délai d'attente: 12
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 66
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 2003
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 4005
protection sociale . retraite . base: 1650
protection sociale . retraite . complémentaire: 166
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > profession libérale non reglementée 2`] = `
"dirigeant . rémunération . net: 30999
dirigeant . rémunération . net . après impôt: 28168
entreprise . activité . nature . libérale . réglementée: false
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9612
protection sociale . invalidité et décès . capital décès . orphelin: 200
protection sociale . invalidité et décès . pension de reversion: 725
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 805
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1342
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . arrêt maladie: 44
protection sociale . maladie . arrêt maladie . délai d'attente: 12
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 66
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 2003
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 4005
protection sociale . retraite . base: 1343
protection sociale . retraite . complémentaire: 117
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > profession libérale non reglementée 3`] = `
"dirigeant . rémunération . net: 25236
dirigeant . rémunération . net . après impôt: 24094
entreprise . activité . nature . libérale . réglementée: false
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: 1076
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: 672
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: 672
protection sociale . invalidité et décès . capital décès: 3681
protection sociale . invalidité et décès . capital décès . orphelin: null
protection sociale . invalidité et décès . pension de reversion: 726
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 807
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1345
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: 42
protection sociale . maladie . arrêt maladie: 42
protection sociale . maladie . arrêt maladie . délai d'attente: 5
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 70
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: null
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: null
protection sociale . retraite . base: 1345
protection sociale . retraite . complémentaire: 119
protection sociale . retraite . trimestres: 4"
`;
